PI-366 (#701)
* PI-366

* remove unused code